update modal-site-detail: add detail

--- a/src/app/pages/alert-and-ticketing-ct/alert-detail/alert-detail.component.html
+++ b/src/app/pages/alert-and-ticketing-ct/alert-detail/alert-detail.component.html
@@ -29,7 +29,7 @@
         </div>
         <div class="form-group form-row">
             <label for="" class="col-md-2">Summary</label>
-            <div class="col-md-10 tx-gray-500">{{ alert.sumary_incident }}</div>
+            <div class="col-md-10 tx-gray-500">{{ alert.summary_incident }}</div>
         </div>
         <div class="form-group form-row">
             <label for="" class="col-md-2">More Detail</label>
