update dashboard: update minor

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -70,7 +70,7 @@
                             Status: {{ selectedStatus === 'NO_COMM'? 'NO COMMUNICATION': selectedStatus }}
                         </p>
                     </div>
-                    <div class="table-responsive" style="overflow-y: scroll;">
+                    <div class="table-responsive" style="overflow-y: auto;">
                         <table class="table table-hover mg-b-0">
                             <thead>
                                 <tr>
