update dashboard: add region availability

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -94,7 +94,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 mg-t-10 mg-md-t-0">
                 <div style="height: 500px;" leaflet [leafletOptions]="mapOptions"
                     (leafletMapReady)="onMapReady($event)"></div>
             </div>
@@ -102,21 +102,26 @@
     </div>
 </div>
 <div class="card mg-t-10">
-    <h6 class="card-header">Alert and Ticketing</h6>
+    <h6 class="card-header">Reporting</h6>
     <div class="card-body row row-xs">
         <div class="col-md-6">
             <div class="card">
-                <h6 class="mg-b-0 card-header tx-gray-500">Ticket</h6>
-                <div class="card-body pd-lg-10">
-                    <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType"
-                        [options]="pieChartOptions" [plugins]="pieChartPlugins" [colors]="pieChartColors"
-                        [legend]="pieChartLegend">
-                    </canvas>
-                </div>
+                <h6 class="mg-b-0 card-header tx-gray-500">Region Availability</h6>
+                <iframe class="card-body ht-350"
+                    src="https://datastudio.google.com/embed/reporting/aa3a7c94-be51-49a2-a165-d21428360178/page/6Of9"
+                    frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </div>
         <div class="col-md-6">
             <div class="card mg-t-10 mg-md-t-0">
+                <h6 class="mg-b-0 card-header tx-gray-500">Ticket</h6>
+                <iframe class="card-body ht-350"
+                    src="https://datastudio.google.com/embed/reporting/f62bf697-abac-4c64-a5c9-4eeba4e80ed5/page/Z0f9"
+                    frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card mg-t-10">
                 <h6 class="card-header tx-gray-500 bd-b-0">SLA and Escalation</h6>
                 <div class="table-responsive">
                     <table class="table table-invoice mg-b-0">
@@ -140,7 +145,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="card mg-t-10">
                 <h6 class="card-header tx-gray-500 bd-b-0">Reason Incident</h6>
                 <div class="table-responsive">
@@ -164,7 +169,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="card mg-t-10">
                 <h6 class="card-header tx-gray-500 bd-b-0">Most Frequent Issues</h6>
                 <div class="table-responsive">
@@ -188,7 +193,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="card mg-t-10">
                 <h6 class="card-header tx-gray-500 bd-b-0">Most Problematic Site</h6>
                 <div class="table-responsive">
