--- a/src/app/pages/site-management-ct/site-profile/site-profile.component.html
+++ b/src/app/pages/site-management-ct/site-profile/site-profile.component.html
@@ -8,75 +8,65 @@
         </ol>
     </nav>
 </div>
-<div class="card">
-    <h6 class="card-header">Detail</h6>
-    <div class="card-body">
-        <div class="form-group row">
-            <label for="" class="col-md-2">Site Name</label>
-            <div class="col-md-10">
-                {{ site.name }}
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="" class="col-md-2">Type Site</label>
-            <div class="col-md-10">
-                {{ site.type }}
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="" class="col-md-2 col-form-label">Location</label>
-            <div class="col-md-10 mg-t-10">
-                <div style="height: 350px;" leaflet [leafletOptions]="mapOptions"
-                    (leafletMapReady)="onMapReady($event)"></div>
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="" class="col-md-2">Region</label>
-            <div class="col-md-10">
-                {{ site.region }}
-            </div>
-        </div>
-        <div class="bg-gray-100 mg-t-20 pd-10">
-            <h6>Asset</h6>
-            <div class="form-group row" *ngFor="let asset of site.assets">
-                <label class="col-md-2" for="">Asset Name</label>
-                <div class="col-md-10 col-lg-8">
-                    {{ asset.name }}
+
+<div class="row row-xs mb-2">
+    <div class="col-md">
+        <div class="card">
+            <h6 class="card-header">Detail</h6>
+            <div class="card-body">
+                <div class="form-group row">
+                    <label for="" class="col-md-2">Site Name</label>
+                    <div class="col-md-10">
+                        {{ site.name }}
+                    </div>
                 </div>
-                <div class="col-md-12">
-                    <div class="bg-gray-200 mg-t-10 pd-10">
-                        <h6>Parameter</h6>
-                        <div class="table-responsive">
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th class="wd-250">Parameter Name (Unit)</th>
-                                        <th>Value</th>
-                                        <th></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr *ngFor="let property of asset.properties">
-                                        <td>{{ property.name }} ({{ property.valueType }})</td>
-                                        <td [title]="deviceValueGenerator(property).title">
-                                            {{ deviceValueGenerator(property).value }}
-                                        </td>
-                                        <td class="tx-right">
-                                            <button class="btn btn-sm btn-primary" *ngIf="property.value !== '?'"
-                                                [routerLink]="['/user/site-management/health-history', property.id]">
-                                                Health History
-                                            </button>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                <div class="form-group row">
+                    <label for="" class="col-md-2">Type Site</label>
+                    <div class="col-md-10">
+                        {{ site.type }}
+                    </div>
+                </div>
+                <div class="form-group row mb-0">
+                    <label for="" class="col-md-2">Region</label>
+                    <div class="col-md-10">
+                        {{ site.region }}
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="card-footer tx-right">
-        <button type="submit" class="btn btn-primary mg-r-5">Edit Site</button>
+    <div class="col-md">
+        <div style="height: 350px;" leaflet [leafletOptions]="mapOptions" (leafletMapReady)="onMapReady($event)"></div>
+    </div>
+</div>
+
+<div class="card mb-2" *ngFor="let asset of site.assets">
+    <div class="card-header d-flex justify-content-between">
+        <h6>{{ asset.name }}</h6>
+        <div class="spinner-border text-primary" role="status" *ngIf="!asset.properties">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </div>
+    <div class="card-body row">
+        <div class="col-md-6 mb-2" *ngFor="let property of asset.properties">
+            <div class="card">
+                <h6 class="card-header tx-gray-500">{{ property.name }} ({{ property.valueType }})</h6>
+                <div class="card-body row">
+                    <div class="col-4 d-flex flex-column justify-content-center align-items-center"
+                        [title]="deviceValueGenerator(property).title" (click)="test(property, $event)">
+                        <h1 class="mg-b-0">{{ deviceValueGenerator(property).value }}</h1>
+                        <span class="tx-gray-500"
+                            *ngIf="property.value">{{ property.value.dataTime | date: 'medium' }}</span>
+                        <button class="btn btn-sm btn-secondary mg-t-30" *ngIf="property.value !== '?'"
+                            [routerLink]="['/user/site-management/health-history', property.id]">
+                            Health History
+                        </button>
+                    </div>
+                    <div class="col-8">
+                        <app-health-history-widget [assetPropertyId]="property.id"></app-health-history-widget>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
