--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -103,6 +103,14 @@
 <div class="card mg-t-10">
     <h6 class="card-header">Reporting</h6>
     <div class="card-body row row-xs">
+        <div class="col-lg-12 mg-b-10">
+            <div class="card">
+                <h6 class="mg-b-0 card-header tx-gray-500">Data Analitic</h6>
+                <iframe class="card-body ht-600"
+                    src="https://datastudio.google.com/embed/reporting/f49f7c0a-e6fa-436c-803f-f5b11f840a64/page/wVOGB"
+                    frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+        </div>
         <div class="col-lg-6">
             <div class="card">
                 <h6 class="mg-b-0 card-header tx-gray-500">Region Availability</h6>
