--- a/src/app/pages/site-management-ct/site-profile/site-profile.component.html
+++ b/src/app/pages/site-management-ct/site-profile/site-profile.component.html
@@ -57,6 +57,8 @@
     </div>
 </div>
 
+<app-sensor-compare></app-sensor-compare>
+
 <div class="card mb-2" *ngFor="let asset of site.assets">
     <div class="card-header d-flex justify-content-between">
         <h6>{{ asset.name }}</h6>
