update minor bug

--- a/src/app/pages/site-management-ct/site-profile/sensor-compare/sensor-compare.component.html
+++ b/src/app/pages/site-management-ct/site-profile/sensor-compare/sensor-compare.component.html
@@ -1,6 +1,6 @@
 <div class="mb-4">
     <div class="row" *ngFor="let formGraph of formGraphs.controls; let indexFormGraph = index" [formGroup]="formGraph">
-        <div class="row col-lg-6 col-md-8">
+        <div class="row col-lg-8">
             <div class="col-4">
                 <div class="form-group form-inline">
                     <label class="mr-2">Asset :</label>
