--- a/src/app/pages/site-management-ct/site-profile/site-profile.component.html
+++ b/src/app/pages/site-management-ct/site-profile/site-profile.component.html
@@ -58,7 +58,7 @@
 </div>
 
 <div class="card pt-2 px-3 mb-2">
-    <ngb-tabset [destroyOnHide]="false">
+    <ngb-tabset [destroyOnHide]="true">
         <ngb-tab title="Graph Compare">
             <ng-template ngbTabContent>
                 <div class="py-4 px-1">
