--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="card-body">
         <div class="row row-xs mg-b-10">
-            <div class="col-lg-3 mg-t-10 mg-lg-t-0">
+            <!-- <div class="col-lg-3 mg-t-10 mg-lg-t-0">
                 <div class="card ht-120 tx-center bg-pink danger"
                     title="Danger {{ toPercent(siteStatistics.danger, siteStatistics.all) }}%"
                     (click)="onStatusChange('DANGER', $event)">
@@ -23,8 +23,20 @@
                         <span class="tx-16 tx-uppercase tx-semibold tx-spacing-1">Danger</span>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="col-lg-3 mg-t-10 mg-lg-t-0">
+                <div class="card ht-120 tx-center bg-pink danger"
+                    title="Critical {{ toPercent(siteStatistics.danger, siteStatistics.all) }}%"
+                    (click)="onStatusChange('CRITICAL', $event)">
+                    <div class="my-auto">
+                        <h4 class="tx-normal tx-rubik tx-40 tx-spacing--1 mg-b-0">
+                            {{ siteStatistics.critical }}
+                        </h4>
+                        <span class="tx-16 tx-uppercase tx-semibold tx-spacing-1">Critical</span>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="col-lg-3 mg-t-10 mg-lg-t-0">
                 <div class="card ht-120 tx-center bg-warning warning"
                     title="Warning {{ toPercent(siteStatistics.warning, siteStatistics.all) }}%"
                     (click)="onStatusChange('WARNING', $event)">
@@ -35,8 +47,20 @@
                         <span class="tx-16 tx-uppercase tx-semibold tx-spacing-1">Warning</span>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="col-lg-3 mg-t-10 mg-lg-t-0">
+                <div class="card ht-120 tx-center bg-orange warning"
+                    title="Major {{ toPercent(siteStatistics.warning, siteStatistics.all) }}%"
+                    (click)="onStatusChange('MAJOR', $event)">
+                    <div class="my-auto">
+                        <h4 class="tx-normal tx-rubik tx-40 tx-spacing--1 mg-b-0">
+                            {{ siteStatistics.major }}
+                        </h4>
+                        <span class="tx-16 tx-uppercase tx-semibold tx-spacing-1">Major</span>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="col-lg-3 mg-t-10 mg-lg-t-0">
                 <div class="card ht-120 tx-center bg-brand-03 normal"
                     title="Normal {{ toPercent(siteStatistics.normal, siteStatistics.all) }}%"
                     (click)="onStatusChange('NORMAL', $event)">
@@ -45,6 +69,18 @@
                             {{ siteStatistics.normal }}
                         </h4>
                         <span class="tx-16 tx-uppercase tx-semibold tx-spacing-1">Normal</span>
+                    </div>
+                </div>
+            </div> -->
+            <div class="col-lg-3 mg-t-10 mg-lg-t-0">
+                <div class="card ht-120 tx-center bg-warning warning"
+                    title="Minor {{ toPercent(siteStatistics.warning, siteStatistics.all) }}%"
+                    (click)="onStatusChange('MINOR', $event)">
+                    <div class="my-auto">
+                        <h4 class="tx-normal tx-rubik tx-40 tx-spacing--1 mg-b-0">
+                            {{ siteStatistics.minor }}
+                        </h4>
+                        <span class="tx-16 tx-uppercase tx-semibold tx-spacing-1">Minor</span>
                     </div>
                 </div>
             </div>
