--- a/src/app/pages/site-management-ct/site-profile-v2/item/item.component.html
+++ b/src/app/pages/site-management-ct/site-profile-v2/item/item.component.html
@@ -6,7 +6,10 @@
             </td>
             <td class="wd-500">
                 <h6>{{ item.groupName }}</h6>
-                <small class="tx-primary">Last Date: {{ item.lastDataTime | date: 'medium' }}</small>
+                <small [ngClass]="{
+                    'tx-danger': last5Minute(item.lastDataTime),
+                    'tx-primary': !last5Minute(item.lastDataTime)
+                }" >Last Date: {{ item.lastDataTime | date: 'medium' }}</small>
                 <div class="table-responsive mb-0">
                     <table class="table table-hover">
                         <thead>
