--- a/src/app/pages/reporting-ct/pln-vs-bl/pln-vs-bl.component.html
+++ b/src/app/pages/reporting-ct/pln-vs-bl/pln-vs-bl.component.html
@@ -1,10 +1,10 @@
 <div class="d-md-flex align-items-center justify-content-between mg-b-20 mg-lg-b-25 mg-xl-b-30">
-    <h4 class="mg-b-0 tx-spacing--1">Komparasi PLN vs Battery Load</h4>
+    <h4 class="mg-b-0 tx-spacing--1">Battery Load Comparation</h4>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb breadcrumb-style1 mg-b-10">
             <li class="breadcrumb-item">Home</li>
             <li class="breadcrumb-item">Reporting</li>
-            <li class="breadcrumb-item active" aria-current="page">Komparasi PLN vs Battery Load</li>
+            <li class="breadcrumb-item active" aria-current="page">Battery Load Comparation</li>
         </ol>
     </nav>
 </div>
